--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "^9.2.0",
+    "@fastify/cors": "^8.4.1",
+    "@fastify/helmet": "^11.1.1",
     "@fastify/jwt": "^7.2.3",
+    "@fastify/rate-limit": "^9.0.0",
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
     "fastify": "^4.24.3",
     "fastify-zod": "^1.4.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.2",
     "prisma": "^5.6.0",
     "ts-node-dev": "^2.0.0",
