--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fastify/helmet": "^11.1.1",
     "@fastify/jwt": "^7.2.3",
     "@fastify/rate-limit": "^9.0.0",
+    "@fastify/swagger": "^8.12.0",
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
